--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate sint excepturi vero iusto nemo deserunt, modi culpa at sunt cum corrupti, nihil pariatur quam ab nulla reiciendis nam? Ipsum, maiores.</p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quaerat? Delectus velit omnis ad laboriosam tempore dolor maiores dolores blanditiis quasi ducimus! Veritatis voluptate voluptatem nihil beatae sequi expedita distinctio.
-    <p></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ipsa explicabo quisquam, assumenda vel, perspiciatis debitis dicta reiciendis expedita, alias laudantium corrupti iusto! Accusamus natus excepturi, cum vel labore quibusdam?</p>
 </body>
 </html>
